kubernetes/cluster0/apps/networking/headscale/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: networking
  labels:
    app.kubernetes.io/name: headscale
spec:
  selector:
    app.kubernetes.io/name: headscale
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9091
      targetPort: metrics
      protocol: TCP
